kanc/src/tests/sample_code/should_fail/single_file/variant_return_type/foreign_non_nullary_type.k
type U {
    .U: U,
}

type T(x: U) {
    .T: T(U.U),
}

type Foo {
    .F: T(U.U),
}
